# CranesSizingTool

./: .env.example  .env.nas.example  .gitignore  CLAUDE.md  README.md  docker-compose.nas.yml  docker-compose.prod.yml  docker-compose.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2dc12c554ef1_initial_schema_users_sessions_projects_.py
backend/app/: config.py  main.py
backend/app/application/: auth.py  calculate_duty_cycle.py  calculate_hoist_requirement.py  calculate_travel_requirement.py  dto.py  generate_report.py  ports.py  save_calculation_run.py  validate_candidate.py
backend/app/domain/: constants.py  registry.py
backend/app/domain/calc/: condition_result.py
backend/app/domain/standards/: drive_sizing_policy.py  mechanism_groups.py  motor_sizing_policy.py
backend/app/infrastructure/db/: base.py  encrypted_types.py  models.py  repositories.py  session.py
backend/app/infrastructure/reports/: pdf_generator.py
backend/app/infrastructure/security/: passwords.py  sessions.py
backend/app/interfaces/: security_headers.py
backend/app/interfaces/api/: auth.py  calc.py  calculation_runs.py  health.py  projects.py  reports.py
backend/tests/: conftest.py
backend/tests/application/: test_calculate_duty_cycle.py  test_calculate_hoist_requirement.py  test_calculate_travel_requirement.py  test_save_calculation_run.py  test_validate_candidate.py
backend/tests/interfaces/: test_api.py  test_auth.py  test_isolation.py  test_projects.py  test_reproducibility.py  test_security_headers.py
docs/: ARCHITECTURE.md  (+3 more)
(+53 files in other folders)
